--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet-async": "^1.0.9",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "react-scroll": "^1.8.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
