--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^12.8.3",
-    "node-sass": "^6.0.0",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.0.9",
     "react-icons": "^4.3.1",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^6.0.1",
     "react-scripts": "^4.0.3",
     "react-scroll": "^1.8.2",
-    "web-vitals": "^1.1.2"
+    "styled-components": "^5.3.3",
+    "web-vitals": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
